added email link on home page, and accompanying view file in layouts

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ github_username: jarretbryan
 # twitter (default), instagram, medium, or dribbble
 social_link: twitter
 social_username: jaybeekeeper
+social_email: jarret.bryan@gmail.com
 
 professional_link: linkedin
 professional_username: jarret-bryan-15a73855
