--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Jarret Bryan
-descriptionLeft: Technologist | Web Developer | NYC-Based
-descriptionRight: You can also find me on [Dev.to](https://dev.to/jaybeekeeper) and [Glitch](https://glitch.com/@jarretbryan)
+descriptionLeft: Technologist | Web Developer
+descriptionRight: Based in NYC
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #github_repo: jekyll # the GitHub repo name for your project
