--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Jarret Bryan
-descriptionLeft: Technologist | Web Developer
+descriptionLeft: Technologist | Web Developer in Training
 descriptionRight: Based in NYC
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
